--- a/src/main.styl
+++ b/src/main.styl
@@ -1,4 +1,10 @@
 /* inject:styl */
+@import 'components/atoms/foo/foo';
+@import 'components/molecules/bar/bar';
+@import 'components/organisms/baz/baz';
+@import 'components/styleguide/atoms/atoms';
+@import 'components/styleguide/molecules/molecules';
+@import 'components/styleguide/organisms/organisms';
 /* endinject:styl */
 
 flexbox(direction, justifyContent = flex-start)
