--- a/src/components/styleguide/atoms/atoms.styl
+++ b/src/components/styleguide/atoms/atoms.styl
@@ -1,6 +1,5 @@
 atoms
   section
-    height 30%
     margin-bottom 10px
     h3
       margin 0
@@ -13,5 +12,7 @@ atoms
       span
         padding-left 15px
     > div
-      height calc(100% - 30px)
       padding-left 15px
+      margin 10px 0
+      > h5
+        margin 5px 0
