--- a/src/components/styleguide/organisms/organisms.styl
+++ b/src/components/styleguide/organisms/organisms.styl
@@ -14,5 +14,7 @@ organisms
     > div
       padding-left 15px
       margin 10px 0
+      &:empty
+        height 40px
       > h5
         margin 5px 0
